[package]
name = "crochet-getty"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["derive"] }
crochet-getty-sys = { path = "../crochet-getty-sys" }
chrono = "^0"
